--- a/latex_thesis/parts/chapter3.tex
+++ b/latex_thesis/parts/chapter3.tex
@@ -1,8 +1,8 @@
 \chapter{Fallaway Setup}
 
 Fallaway distinguishes itself from other fuzzers like AFLNet or ChatAFL by using a \textbf{persistent mode}. This mode allows the fuzzer to maintain the server's state across multiple requests, which is especially useful in scenarios where the server does not reset its state between requests, such as when managing user sessions or maintaining authentication states in a web application.
-\\The persistent mode is implemented by modifying the Lighttpd server to maintain its state between requests. The server operates in a separate process, and the fuzzer interacts with it via a socket. The fuzzer sends requests to the server and receives responses, using the results to guide the generation of subsequent requests. This process continues in a loop until the fuzzing session is complete.
-\\To enable this, we must modify the Lighttpd code to ensure that the server continuously receives, processes, and responds to requests without shutting down. The changes are made to the function \texttt{server\_main\_loop} in the \texttt{src/server.c} file, and to the connection handling functions in \texttt{src/connections.c} of the Lighttpd source code. The specific code changes are shown in the next section, providing a comparison between the original and modified code.
+\\The persistent mode is implemented by modifying the Lighttpd server to maintain its state between requests. The server operates in a separate process and the fuzzer interacts with it via a socket. The fuzzer sends requests to the server and receives responses, using the results to guide the generation of subsequent requests. This process continues in a loop until the fuzzing session is complete.
+\\To enable this, we must modify the Lighttpd code to ensure that the server continuously receives, processes and responds to requests without shutting down. The changes are made to the function \texttt{server\_main\_loop} in the \texttt{src/server.c} file and to the connection handling functions in \texttt{src/connections.c} of the Lighttpd source code. The specific code changes are shown in the next section, providing a comparison between the original and modified code.
 
 \section{Lighttpd Code Modifications for Persistent Mode}
 
