--- a/latex_thesis/parts/front.tex
+++ b/latex_thesis/parts/front.tex
@@ -121,7 +121,7 @@ Final Project Report
 \bigskip
 
 {\raggedleft
-Supervisior: Giampalolo Bella \\
+Supervisior: Giampaolo Bella \\
 Advisor: Marcello Maugeri \\
 External Advisor: Cristian Daniele
 \par}
