--- a/latex_thesis/parts/chapter5.tex
+++ b/latex_thesis/parts/chapter5.tex
@@ -1,5 +1,17 @@
 \chapter{Results}
 \label{chap:Results}
-Discussions and comparisions of graphs and results.
 
-% comparison 24h 7d
+\begin{lstlisting}
+    Fallaway
+    complete_coverage: 6% (883/15168)
+    total_executions: 79987763
+    
+    AFLNet
+    complete_coverage: 5% (830/15168)
+    total_executions: 3274
+    
+    ChatAFL
+    complete_coverage: 6% (850/15168)
+    total_executions: 6536    
+\end{lstlisting}
+
