general full structure done, to add more contents

--- a/latex_thesis/bibliography.bib
+++ b/latex_thesis/bibliography.bib
@@ -11,9 +11,8 @@ booktitle={Proceedings of the 31st Annual Network and Distributed System Securit
 year={2024},}
 
 @inproceedings{Fallaway,
-author={TODO},
-title={TODO},
-booktitle={TODO},
+author={Timme Bethe},
+title={Fallaway: High Throughput Stateful Fuzzing By Making AFL* State-Aware},
 year={2024},}
 
 @inproceedings{profuzzbench,
